--- a/Neutral.html
+++ b/Neutral.html
@@ -1,197 +1,240 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Font Awesome -->
-    <script src="https://kit.fontawesome.com/e9ea849082.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/e9ea849082.js"
+      crossorigin="anonymous"
+    ></script>
 
     <!-- Bootstrap CSS -->
-<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
 
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-<!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Grandiflora+One&display=swap"
       rel="stylesheet"
-    >
-    <link rel="stylesheet" href="assets/CSS/styles.css">
+    />
+    <link rel="stylesheet" href="assets/CSS/styles.css" />
 
     <title>Colour Theory</title>
-    <link rel="icon" type="image/x-icon" href="assets/site-images/favicon.ico">
-
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="assets/site-images/favicon.ico"
+    />
   </head>
 
   <body>
     <!-- Navbar base code from Bootstrap -->
 
-  <!-- Nav bar section-->
-<div class=" container-fluid navbar-fixed-top">
-  <nav class="navbar navbar-expand-lg navbar-light">
-    <div class="d-flex flex-grow-1">
-      <span class="w-100 d-lg-none d-block"
-        ><!-- hidden spacer to center brand on mobile --></span
-      >
-      <a class="navbar-brand d-none d-inline-block" href="#">
-        <img src="assets/site-images/Logo.webp" alt="Logo for Colour Theory" width="125" height="125">
-      </a>
-      <div class="w-100 text-right">
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#myNavbar"
-          aria-label="Collapsible menu"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      </div>
-    </div>
-    <div class="menu collapse navbar-collapse flex-grow-1 text-right" id="myNavbar">
-      <ul class="navbar-nav ml-auto flex-nowrap">
-        <li class="nav-item">
-          <a href="index.html" class="nav-link m-2 menu-item">Home</a>
-        </li>
-        <li class="nav-item">
-          <a href="colour-theory.html" class="nav-link m-2 menu-item">What is Colour Theory?</a>
-        </li>
-
-        <!-- Dropdown menu section -->
-        <li class="nav-item dropdown">
-            <a href="#" class="nav-link dropdown-toggle m-2 menu-item" id="navbarDropdown" data-toggle="dropdown" aria-expanded="false">
-            Palettes
+    <!-- Nav bar section-->
+    <div class="container-fluid navbar-fixed-top">
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="d-flex flex-grow-1">
+          <span class="w-100 d-lg-none d-block"
+            ><!-- hidden spacer to center brand on mobile --></span
+          >
+          <a class="navbar-brand d-none d-inline-block" href="#">
+            <img
+              src="assets/site-images/Logo.webp"
+              alt="Logo for Colour Theory"
+              width="125"
+              height="125"
+            />
           </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="Neutral.html">Neutral</a></li>
-            <li><a class="dropdown-item" href="Monochromatic.html">Monochromatic</a></li>
-            <li><a class="dropdown-item" href="Maximalist.html">Maximalist</a></li>
+          <div class="w-100 text-right">
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-toggle="collapse"
+              data-target="#myNavbar"
+              aria-label="Collapsible menu"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+          </div>
+        </div>
+        <div
+          class="menu collapse navbar-collapse flex-grow-1 text-right"
+          id="myNavbar"
+        >
+          <ul class="navbar-nav ml-auto flex-nowrap">
+            <li class="nav-item">
+              <a href="index.html" class="nav-link m-2 menu-item">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="colour-theory.html" class="nav-link m-2 menu-item"
+                >What is Colour Theory?</a
+              >
+            </li>
+
+            <!-- Dropdown menu section -->
+            <li class="nav-item dropdown">
+              <a
+                href="#"
+                class="nav-link dropdown-toggle m-2 menu-item"
+                id="navbarDropdown"
+                data-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Palettes
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li>
+                  <a class="dropdown-item" href="Neutral.html">Neutral</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="Monochromatic.html"
+                    >Monochromatic</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="Maximalist.html">Maximalist</a>
+                </li>
+              </ul>
+            </li>
+
+            <li class="nav-item">
+              <a href="contact.html" class="nav-link m-2 menu-item">Contact</a>
+            </li>
           </ul>
-        </li>
-        
-        <li class="nav-item">
-          <a href="contact.html" class="nav-link m-2 menu-item">Contact</a>
-        </li>
-      </ul>
+        </div>
+      </nav>
     </div>
-  </nav>
-</div>
 
-
-
-<!-- Hero Images section  -->
+    <!-- Hero Images section  -->
 
     <div class="container-fluid">
-
-      <h2 class="palette-title">
-        Neutral Colour Palette
-      </h2>
+      <h2 class="palette-title">Neutral Colour Palette</h2>
 
       <p class="palette-title">
-        For those of you that prefer a more pared back look, that doesn't mean your spaces need to be dull.  There are more than 150,000 shades of white paint in the world that you can choose from.  You need to take just as much care choosing your neutrals as you do your bolder colours.  
+        For those of you that prefer a more pared back look, that doesn't mean
+        your spaces need to be dull. There are more than 150,000 shades of white
+        paint in the world that you can choose from. You need to take just as
+        much care choosing your neutrals as you do your bolder colours.
       </p>
     </div>
 
     <!-- Bootstrap base code  -->
     <div class="hero-images row row-no-margin">
       <div class="col-xs-12 col-sm-6 col-no-padding">
-        <img class="thumbnail img-responsive" src="assets/site-images/PALETTES/neutral_room.webp" alt="Neutral Room">
+        <img
+          class="thumbnail img-responsive"
+          src="assets/site-images/PALETTES/neutral_room.webp"
+          alt="Neutral Room"
+        />
       </div>
       <div class="col-xs-12 col-sm-6 col-no-padding">
-        <img class="thumbnail img-responsive" src="assets/site-images/PALETTES/neutral_palette.webp" alt="neutral colour palette">
+        <img
+          class="thumbnail img-responsive"
+          src="assets/site-images/PALETTES/neutral_palette.webp"
+          alt="neutral colour palette"
+        />
       </div>
     </div>
 
+    <!-- How To section  -->
 
-<!-- How To section  -->
+    <div class="container-fluid how-to">
+      <h3>How to create a neutral colour scheme:</h3>
 
-<div class="container-fluid how-to">
-  <h3>
-How to create a neutral colour scheme:  </h3>
+      <ul class="palette-list">
+        <li>
+          Think about textures as well as colour. You might have three white
+          items in the room but if they are all different materials, it creates
+          interest.
+        </li>
+        <li>One small pop of colour can really elevate a neutral scheme.</li>
+        <li>
+          Bring in plenty of natural materials to keep the space warm. An
+          expanse of wood floor softens a white room whereas white walls with a
+          tiled floor can feel cold.
+        </li>
+      </ul>
+    </div>
 
-<ul class="palette-list">
-  <li>Think about textures as well as colour.  You might have three white items in the room but if they are all different materials, it creates interest. </li>
-  <li>One small pop of colour can really elevate a neutral scheme.</li>
-  <li>Bring in plenty of natural materials to keep the space warm.  An expanse of wood floor softens a white room whereas white walls with a tiled floor can feel cold. </li>
-</ul>
+    <!-- Footer Section -->
 
+    <div class="container-fluid">
+      <img
+        src="assets/site-images/Line.webp"
+        alt="rainbow line"
+        style="width: 100%; height: 2px"
+      />
+      <!-- Footer base code from Bootstrap -->
+      <footer
+        class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4"
+      >
+        <div class="col-md-4 d-flex align-items-center">
+          <a
+            href="/"
+            class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1"
+          >
+            <svg class="bi" width="30" height="24">
+              <use
+                xlink:href="#bootstrap"
+                aria-label="DesignLed copyright"
+              ></use>
+            </svg>
+          </a>
+          <span class="mb-3 mb-md-0 text-body-secondary"
+            >© 2023 DesignLed Ltd</span
+          >
+        </div>
 
-  </div>
-
-       <!-- Footer Section -->
-
-  <div class="container-fluid">
-    <img
-      src="assets/site-images/Line.webp"
-      alt="rainbow line"
-      style="width: 100%; height: 2px"
-    >
-     <!-- Footer base code from Bootstrap -->
-    <footer
-      class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4"
-    >
-      <div class="col-md-4 d-flex align-items-center">
-        <a
-          href="/"
-          class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1"
-        >
-          <svg class="bi" width="30" height="24">
-            <use
-              xlink:href="#bootstrap"
-              aria-label="DesignLed copyright"
-            ></use>
-          </svg>
-        </a>
-        <span class="mb-3 mb-md-0 text-body-secondary"
-          >© 2023 DesignLed Ltd</span
-        >
-      </div>
-
-      <div class="nav col-md-2 justify-content-between">
-        <a
-          href="https://www.pinterest.ie/designledstudio"
-          target="_blank"
-          rel="noopener noreferral"
-          aria-label="Pinterest"
-          ><i
-            class="social-icons fa-brands fa-pinterest fa-2x"
-            aria-hidden="true"
-          ></i
-        ></a>
-        <a
-          href="https://www.facebook.com/designled"
-          target="_blank"
-          rel="noopener noreferral"
-          aria-label="Facebook"
-          ><i
-            class="social-icons fa-brands fa-facebook-f fa-2x"
-            aria-hidden="true"
-          ></i
-        ></a>
-        <a
-          href="https://www.instagram.com/designledstudio/"
-          target="_blank"
-          rel="noopener noreferral"
-          aria-label="Instagram"
-          ><i
-            class="social-icons fa-brands fa-instagram fa-2x"
-            aria-hidden="true"
-          ></i
-        ></a>
-        <a href="mailto:hello@designled.io" aria-label="email"
-          ><i
-            class="social-icons fa-solid fa-envelope fa-2x"
-            aria-hidden="true"
-          ></i
-        ></a>
-      </div>
-    </footer>
-  </div>
-</body>
+        <div class="nav col-md-2 justify-content-between">
+          <a
+            href="https://www.pinterest.ie/designledstudio"
+            target="_blank"
+            rel="noopener noreferral"
+            aria-label="Pinterest"
+            ><i
+              class="social-icons fa-brands fa-pinterest fa-2x"
+              aria-hidden="true"
+            ></i
+          ></a>
+          <a
+            href="https://www.facebook.com/designled"
+            target="_blank"
+            rel="noopener noreferral"
+            aria-label="Facebook"
+            ><i
+              class="social-icons fa-brands fa-facebook-f fa-2x"
+              aria-hidden="true"
+            ></i
+          ></a>
+          <a
+            href="https://www.instagram.com/designledstudio/"
+            target="_blank"
+            rel="noopener noreferral"
+            aria-label="Instagram"
+            ><i
+              class="social-icons fa-brands fa-instagram fa-2x"
+              aria-hidden="true"
+            ></i
+          ></a>
+          <a href="mailto:hello@designled.io" aria-label="email"
+            ><i
+              class="social-icons fa-solid fa-envelope fa-2x"
+              aria-hidden="true"
+            ></i
+          ></a>
+        </div>
+      </footer>
+    </div>
+  </body>
 </html>
