Update readme with required form fields bug fix

--- a/contact.html
+++ b/contact.html
@@ -189,9 +189,11 @@
             </div>
          
           <div class="form-group text-center text-md-left">
-            <input type="submit"
+            <input 
+            type="submit"
             formaction="Contact-form-submit.html"
-            />
+            class="submit-button"
+            >
           </div>
         </div>
       </div>
