Correct formatting and palette on Contact page

--- a/contact.html
+++ b/contact.html
@@ -204,17 +204,26 @@
       <div class="text-center">
         <ul class="list-unstyled mb-0">
           <li>
-            <i class="fas fa-map-marker-alt fa-2x"></i>
+            <i 
+            class="fas fa-map-marker-alt fa-2x"
+            style="color: #580b20"
+            ></i>
             <p>Dublin, Ireland</p>
           </li>
 
           <li>
-            <i class="fas fa-phone mt-4 fa-2x"></i>
+            <i 
+            class="fas fa-phone mt-4 fa-2x"
+            style="color: #580b20"
+            ></i>
             <p>+ 353 86 028 9382</p>
           </li>
 
           <li>
-            <i class="fas fa-envelope mt-4 fa-2x"></i>
+            <i 
+            class="fas fa-envelope mt-4 fa-2x"
+            style="color: #580b20"
+            ></i>
             <p>hello@designled.io</p>
           </li>
         </ul>
