--- a/contact.html
+++ b/contact.html
@@ -238,6 +238,7 @@
         alt="rainbow line"
         style="width: 100%; height: 2px"
       />
+
       <!-- Footer base code from Bootstrap -->
       <footer
         class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4"
@@ -254,9 +255,16 @@
               ></use>
             </svg>
           </a>
-          <span class="mb-3 mb-md-0 text-body-secondary"
-            >© 2023 DesignLed Ltd</span
+          <a 
+          class="copyright"
+          href="https://designled.io/"
+          target="_blank"
+          rel="noopener noreferral"
+          aria-label="DesignLed website"
           >
+          <span class="mb-3 mb-md-0 text-body-secondary"
+            >© 2023 DesignLed Ltd</span>
+          </a>
         </div>
 
         <div class="nav col-md-2 justify-content-between">
