Change email input on contact form to 'email'

--- a/contact.html
+++ b/contact.html
@@ -148,7 +148,7 @@
                 <div class="md-form mb-0">
                   <label for="email" class="">Your email</label>
                   <input
-                    type="text"
+                    type="email"
                     id="email"
                     name="email"
                     class="form-control"
