Add spacing on mobile view on colour theory space

--- a/colour-theory.html
+++ b/colour-theory.html
@@ -152,7 +152,7 @@
 
     <!-- Colour sections -->
     <!-- Bootstrap base code  -->
-    <div class="container-fluid">
+    <div class="container-fluid colours-section">
       <div class="colours row row-no-margin">
         <div class="col-xs-12 col-sm-6">
           <img
@@ -161,7 +161,7 @@
             alt="yellow gradient colours"
           />
         </div>
-        <div class="col-xs-12 col-sm-6">
+        <div class="description col-xs-12 col-sm-6">
           <p>
             Yellow is the colour of happiness, optimism and creativity. This is
             why it's such a great colour for children's spaces. Kids' bedrooms,
@@ -182,7 +182,7 @@
             alt="orange gradient colours"
           />
         </div>
-        <div class="col-xs-12 col-sm-6">
+        <div class="description col-xs-12 col-sm-6">
           <p>
             Whilst orange isn't a millions miles away from yellow, it's a less
             popular colour but one that has no less positive connotations. It is
@@ -206,7 +206,7 @@
             alt="red gradient colours"
           />
         </div>
-        <div class="col-xs-12 col-sm-6">
+        <div class="description col-xs-12 col-sm-6">
           <p>
             Red is a energizing, strong colour that evokes a strong reaction.
             It's conducive to socialising and strong personalities. That's why
@@ -228,7 +228,7 @@
           />
         </div>
 
-        <div class="col-xs-12 col-sm-6">
+        <div class="description col-xs-12 col-sm-6">
           <p>
             Pink is no longer the domain of little girl's bedrooms. With its
             resurgence in popularity in recent years, all the major paint brands
@@ -251,7 +251,7 @@
             alt="purple gradient colours"
           />
         </div>
-        <div class="col-xs-12 col-sm-6">
+        <div class="description col-xs-12 col-sm-6">
           <p>
             Purple is often associated with luxury and elegance through its
             association with royalty. Indeed the darker variants of this colour
@@ -272,7 +272,7 @@
             alt="blue gradient colours"
           />
         </div>
-        <div class="col-xs-12 col-sm-6">
+        <div class="description col-xs-12 col-sm-6">
           <p>
             Blue is one of the most versatile colours on the colour wheel. It
             can be used from everywhere from the bedroom to the living room to
@@ -293,7 +293,7 @@
             alt="green gradient colours"
           />
         </div>
-        <div class="col-xs-12 col-sm-6">
+        <div class="description col-xs-12 col-sm-6">
           <p>
             As everyone konws, green is the colour of nature. It is an innately
             peaceful colour in its purest form when close to forest colours. It
